--- a/index.html
+++ b/index.html
@@ -70,6 +70,60 @@
             <div class="item">
                <img class="box-filme" src="./img/mini-07.jpg" alt="A Viagem de Chihiro" srcset="">
             </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-08.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-09.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-10.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-11.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-12.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+         </div>
+
+         <div class="owl-carousel owl-theme">
+            <div class="item">
+               <img class="box-filme" src="./img/mini-13.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-14.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-15.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-16.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-17.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-19.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-20.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-21.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-22.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-23.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-24.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
+            <div class="item">
+               <img class="box-filme" src="./img/mini-18.jpg" alt="A Viagem de Chihiro" srcset="">
+            </div>
          </div>
       </section>
 
