--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             <a href="#">Bombando</a>
             <a href="#">Minha lista</a>
             </nav>
+            <div class="bar">
+               <i class="fas fa-search" id="lupa"></i>
+               <input id="search" type="text" placeholder="Títulos, gente e gêneros">
+               
+               <i class="fas fa-bell" id="sino"></i>
+               <div class="avatar"></div>
+            </div>
          </div>
+         
       </header>
 
       <main>
